tests/snapshots/cli__init_rejects_path_and_vault_together.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - "--vault"
    - from-flag
    - init
    - from-arg
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: pass the target as either `--vault` or the positional path, not both
