tests/snapshots/cli__init_second.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - init
    - vault
---
success: true
exit_code: 0
----- stdout -----
Vault already initialized at vault

----- stderr -----
