tests/snapshots/cli__init_uses_vault_flag_when_path_omitted.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - "--vault"
    - via-flag
    - init
---
success: true
exit_code: 0
----- stdout -----
Initialized vault at via-flag
ignored /by-tag/

----- stderr -----
