tests/snapshots/cli__list_is_an_alias_for_search.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - list
    - "-n"
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
ID                          DATE        TITLE  TAGS  PATH
[ULID....................]  [DATE....]  A            [VAULT]/all-notes/[ULID....................]-a.md

----- stderr -----
