tests/snapshots/cli__malformed_note_warns_but_continues.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - search
    - "-n"
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
[ULID]	[DATE]	Good		[VAULT]/all-notes/[ULID]-good.md

----- stderr -----
warning: skipped `[ULID]-bad.md`: the frontmatter has no `title` field
