tests/snapshots/cli__new_empty_creates_a_file_with_no_content.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - new
    - "--empty"
    - My First Note
    - "--print"
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
[VAULT]/all-notes/[ULID....................]-my-first-note.md

----- stderr -----
