tests/snapshots/cli__new_empty_rejects_a_template_selection.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - new
    - "--empty"
    - "-t"
    - meeting
    - "-p"
    - Standup
  env:
    EDITOR: "true"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the argument '--empty' cannot be used with '--template <NAME>'

Usage: ntropy new --empty --print <TITLE>...

For more information, try '--help'.
