tests/snapshots/cli__new_missing_named_template_errors.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - new
    - X
    - "-t"
    - absent
    - "--print"
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: while creating the note: no template `absent` in [VAULT]/.ntropy/templates
