tests/snapshots/cli__new_no_edit_with_invalid_template_leaves_no_stray_file.snap
---
source: tests/cli.rs
assertion_line: 226
info:
  program: ntropy
  args:
    - new
    - Hello World
    - "--no-edit"
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: while creating the note: the frontmatter has no `title` field
