tests/snapshots/cli__new_print_prints_path.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - new
    - My First Note
    - "--print"
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
[VAULT]/all-notes/[ULID....................]-my-first-note.md

----- stderr -----
